--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <!-- Title -->
-    <title>Welcome | Datta Able Free React + Redux Admin Template</title>
+    <title>Welcome | Expo Virtual</title>
 
     <!-- Meta -->
     <meta charset="utf-8">
